--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "mysql": "^2.16.0",
     "nodemon": "^1.18.3"
   },
   "repository": {
