--- a/public/package.json
+++ b/public/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "8.9.1",
+    "npm": "5.8.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
