--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "knex": "^0.15.2",
     "mysql": "^2.16.0",
     "nodemailer": "^4.6.8",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "sqlstring": "^2.3.1"
   },
   "repository": {
     "type": "git",
